--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 }
 
 .selectedEvent {
-	background-color: E6E6F5;
-	border: 1px C8C8DD;
+	background-color: #E6E6F5;
+	border: 1px #C8C8DD;
+}
+
+tbody tr:hover td.hasRowSpan { 
+    background-color: #E6E6F5;   /* or whatever color you want */
 }
