--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,18 @@ tbody tr:hover td.hasRowSpan {
 	margin-top: 50px;
 	color: #FFFFFF;
 }
+
+.verticalSpace2 {
+	margin-top: 35px;
+	color: #FFFFFF;
+}
+
+.vertical {
+	padding-top: 10%;
+}
+
+.center {
+     float: none;
+     margin-left: auto;
+     margin-right: auto;
+}
