--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,18 @@ tbody tr:hover td.hasRowSpan {
 }
 
 .verticalSpace {
-	margin-top: 50px;
-	color: #FFFFFF;
+	margin-top: 10px;
+	color: #FFFFFF
 }
 
 .verticalSpace2 {
 	margin-top: 35px;
 	color: #FFFFFF;
+}
+
+.verticalSpace3 {
+	margin-top: 50px;
+	color: #FFFFFF
 }
 
 .vertical {
@@ -29,4 +34,35 @@ tbody tr:hover td.hasRowSpan {
      float: none;
      margin-left: auto;
      margin-right: auto;
+}
+
+#sidebar.affix {
+	width: inherit;
+	position: fixed;
+	top: 50px;
+}
+
+#sidebar.affix-bottom {
+	width: inherit;
+	position: absolute;
+	top: auto;
+	bottom: 100px;
+}
+
+#sidebar.affix-top {
+	width: inherit;
+	position: fixed;
+}
+
+body {
+	padding-top: 50px;
+}
+
+.row {
+	margin-right: 0px;
+	margin-left: 0px;
+}
+
+#sortDropdown {
+	width: 120px;
 }
