trends new_users

--- a/css/trends.css
+++ b/css/trends.css
@@ -78,6 +78,19 @@
     content: "";   
 }
 
+.new:after {
+    border-bottom: 20px solid #ddd;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    width: 0;
+    height: 0px;
+    bottom: 100%;
+    display: block;
+    position: absolute;
+    left: 298px;
+    content: "";  
+}
+
 #circle1.clicked {
     left: 0px;
     top: 47px;
@@ -219,6 +232,22 @@
 }
 
 /*   Newcomers          */
+#circle-new.clicked {
+    left: 0px;
+    top: 47px;
+    opacity: .45;
+    background: #023EBA;
+    -webkit-box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 1);
+    -webkit-transition: all .1s;
+}
+
+#circle-new.clicked:hover {
+    top: 47px;
+    opacity: .35;
+    background: #023EBA;
+    -webkit-transition: all .25s;
+}
+
 #circle-new {
     cursor: pointer;
     position: relative;
