--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+.features-header {
+	font-size: 22px;
+	font-weight 600;
+	color: #4c4c4c;
+}
+
 .circle-shadow {
     -webkit-box-shadow: 1px 2px 3px 2px rgba(0, 0, 0, .5);
     margin-left: 8px;
